# cldeplus

./: .gitignore  CMakeLists.txt  CMakeLists.txt.old  Cloude.h  LICENSE  README.md  main.cpp
AppTest/: CMakeLists.txt  StoreTest.cpp  StoreTest.h  main.cpp
AppTest/Application/: CustomerLoader.cpp  CustomerLoader.h  CustomerMap.cpp  CustomerMap.h  EnquiryLoader.cpp  EnquiryLoader.h  EnquiryMap.cpp  EnquiryMap.h  OrderItemsMap.cpp  OrderItemsMap.h  OrderMap.cpp  OrderMap.h  PreOrderItemsMap.cpp  PreOrderItemsMap.h  PreOrderLoader.cpp  PreOrderLoader.h  PreOrderMap.cpp  PreOrderMap.h  ProductMap.cpp  ProductMap.h  StockGroupLoader.cpp  StockGroupLoader.h  StockGroupMap.cpp  StockGroupMap.h
AppTest/Entity/: Customer.cpp  Customer.h  Enquiry.h  PreOrder.h  PreOrderItems.h
AppTest/EntityStore/: Simple.cpp  Simple.h
AppTest/Query/: Criteria.hpp  Predicate.hpp
AppTest/Relation/: NamedEntity.hpp  NamedEntity01.hpp  NamedEntity02.hpp  Relation.hpp
AppTest/Segmentation/: Segmentation.hpp  Transformation.hpp
AppTest/Store/: CreateTest.h  EnquiryMongoDbStore.cpp  EnquiryMongoDbStore.h  EnquirySQLiteStore.cpp  EnquirySQLiteStore.h  MySqlStore.hpp  MySqlStore00.hpp  MySqlStore01.hpp  MySqlStore02.hpp  SQLiteStore.hpp  StockGroupMySqlStore.cpp  StockGroupMySqlStore.h  StockGroupPostgreStore.cpp  StockGroupPostgreStore.h  StoreCreateSaveDeleteTest.h  StoreCreateTest.h  StoreGetTest.h  StoreSimple.cpp  StoreSimple.h
AppTest/Type/: CreateValue.hpp  Type.hpp  ValueComparison.h  ValueComparison.hpp
AppTest/gtest/: Makefile  config.status
Drivers/MySql/: CMakeLists.txt  MySqlSourceDriver.cpp  MySqlSourceDriver.h  MySqlSourceException.cpp  MySqlSourceException.h  MySqlSourceHelper.cpp  MySqlSourceHelper.h
Drivers/SQLite/: CMakeLists.txt  SQLiteSourceDriver.cpp  SQLiteSourceDriver.h  SQLiteSourceException.cpp  SQLiteSourceException.h  SQLiteSourceHelper.cpp  SQLiteSourceHelper.h
Examples/: CMakeLists.txt  main.cpp  main.h  mongodb_c_example.cpp  mongodb_c_example.h  mysql_c_example.cpp  mysql_c_example.h
Foundation/: CMakeLists.txt  Cell.cpp  Cell.h  Column.cpp  Column.h  Entity.cpp  Entity.h  EntityLink.cpp  EntityLink.h  EntityLoader.cpp  EntityLoader.h  EntityMap.cpp  EntityMap.h  EntityProxy.cpp  EntityProxy.h  EntityQuery.cpp  EntityQuery.h  EntityRelationship.cpp  EntityRelationship.h  EntitySourceDriver.cpp  EntitySourceDriver.h  EntityStore.cpp  EntityStore.h  Enums.h  Field.cpp  Field.h  Foundation.h  Identity.cpp  Identity.h
Foundation/Common/: IComparable.h  ICompoundAssignable.h  IComputable.h  IEquatable.h  IFormattable.h  IParsable.h  IPrintable.h
Foundation/Comparer/: CellComparer.cpp  CellComparer.h  CellEqual.cpp  CellEqual.h  EntityProxyCmp.cpp  EntityProxyCmp.h  EntityProxyComparer.cpp  EntityProxyComparer.h  EntityProxyEqual.cpp  EntityProxyEqual.h  EntityProxyGreater.cpp  EntityProxyGreater.h  EntityProxyLess.cpp  EntityProxyLess.h  RecordComparisonResult.cpp  RecordComparisonResult.h
Foundation/Data/: CharacterValue.cpp  CharacterValue.h  NumericValue.cpp  NumericValue.h  TimeBasedValue.cpp  TimeBasedValue.h  TypeEnums.h  TypeIncludes.h  Value.cpp  Value.h  ValueFactory.cpp  ValueFactory.h  ValueToPrimatives.hpp  cldeCharacterValue.cpp  cldeCharacterValue.h  cldeData.h  cldeNumericValue.cpp  cldeNumericValue.h  cldeValue.cpp  cldeValue.h  cldeValueFactory.cpp  cldeValueFactory.h  cldeValueType.h
Foundation/DataSource/: Command.cpp  Command.h  Connector.h
Foundation/Enumeration/: DbType.h
Foundation/Exception/: DataSourceRoutineException.h  EntityException.cpp  EntityException.h  EntityStoreRoutineException.cpp  EntityStoreRoutineException.h  NonSupportedDataTypeException.h  cldeDataSourceRoutineException.cpp  cldeDataSourceRoutineException.h  cldeEntityException.cpp  cldeEntityException.h  cldeEntityStoreRoutineException.cpp  cldeEntityStoreRoutineException.h  cldeException.cpp  cldeException.h  cldeNonSupportedDataTypeException.cpp  cldeNonSupportedDataTypeException.h  cldeNonSupportedFunctionException.cpp  cldeNonSupportedFunctionException.h  cldeSegmentationException.cpp  cldeSegmentationException.h
Foundation/Helper/: EntityStoreHelper.cpp  EntityStoreHelper.h  SqlGenerator.cpp  SqlGenerator.h
Foundation/Link/: Join.cpp  Join.h
Foundation/Query/: Comparative.cpp  Comparative.h  Criteria.cpp  Criteria.h  CriteriaComposite.cpp  CriteriaComposite.h  CriteriaIterator.h  CriteriaLeaf.cpp  CriteriaLeaf.h  Expression.cpp  Expression.h  Predicate.cpp  Predicate.h  PredicateComposite.cpp  PredicateComposite.h  PredicateIterator.cpp  PredicateIterator.h  PredicateLeaf.cpp  PredicateLeaf.h  PredicateSentinel.cpp  PredicateSentinel.h  Predication.cpp  Predication.h  Query.h  SqlGenerator.cpp  SqlGenerator.h
Foundation/Segmentation/: Join.cpp  Join.h  JoinPhrase.cpp  JoinPhrase.h  Segment.cpp  Segment.h  Target.cpp  Target.h
Foundation/Store/: AbstractEntity.cpp  AbstractEntity.h  AbstractionEntity.cpp  AbstractionEntity.h  CellHelper.cpp  CellHelper.h  EntityStoreHelper.cpp  EntityStoreHelper.h  IDataRecord.cpp  IDataRecord.h
Foundation/Transformation/: CellTransformer.cpp  CellTransformer.h  EntityTransformer.cpp  EntityTransformer.h  TypeConverter.cpp  TypeConverter.h
Foundation/Type/: cldeCharacterValue.cpp  (+10 more)
Relation/: CMakeLists.txt  Link.cpp  Link.h  LinkToMany.cpp  LinkToMany.h  LinkToOne.cpp  LinkToOne.h  MultiCellsObject.h  NamedEntityLoader.h  NamedEntityStore.cpp  NamedEntityStore.h  Relation.h  RelationFetcher.cpp  RelationFetcher.h  RelationMap.cpp  RelationMap.h
Test/: CMakeLists.txt  main.cpp
cldeplus/: CMakeLists.txt  Cell.cpp  Cell.h  CldePlus-Commons.h  CldePlus-Portable.h  Column.cpp  Column.h  DataRecord.cpp  DataRecord.h  Entity.cpp  Entity.h  EntityCell.cpp  EntityCell.h  EntityColumn.cpp  EntityColumn.h  EntityException.cpp  EntityException.h  EntityIdentity.cpp  EntityIdentity.h  EntityMap.cpp  EntityMap.h  EntityQuery.cpp  EntityQuery.h  EntityStore.cpp  EntityStore.h  Exception.cpp  Exception.h  Identity.cpp  Identity.h  Primitive.h  Value.cpp  Value.h  ValueEnums.h  ValueFactory.cpp  ValueFactory.h  cldeplus.h
(+1105 files in other folders)
