cmake_minimum_required(VERSION 3.2)
project(cloud_e_plus)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

add_library(foundation STATIC
    Enum/CommonBufferSize.h
    Column.cpp
    Column.h
    Cell.cpp
    Cell.h
    Identity.cpp
    Identity.h
    Entity.cpp
    Entity.h
    EntityMap.cpp
    EntityMap.h
    EntityStore.cpp
    EntityStore.h
    EntityProxy.cpp
    EntityProxy.h
    EntityQuery.cpp
    EntityQuery.h
    EntitySourceDriver.cpp
    EntitySourceDriver.h
    Exception/cldeNonSupportedDataTypeException.cpp
    Exception/cldeNonSupportedDataTypeException.h
    Exception/cldeDataSourceRoutineException.cpp
    Exception/cldeDataSourceRoutineException.h
    Exception/cldeEntityStoreRoutineException.cpp
    Exception/cldeEntityStoreRoutineException.h
    Exception/cldeEntityException.cpp
    Exception/cldeEntityException.h
    Query/Criteria.cpp
    Query/Criteria.h
    Query/Helper/SqlHelper.cpp
    Query/Helper/SqlHelper.h
    Query/Comparative/And.cpp
    Query/Comparative/And.h
    Query/Comparative/Or.cpp
    Query/Comparative/Or.h
    Query/Comparative/Equal.cpp
    Query/Comparative/Equal.h
    Query/Comparative/Greater.cpp
    Query/Comparative/Greater.h
    Query/Comparative/GreaterOrEqual.cpp
    Query/Comparative/GreaterOrEqual.h
    Query/Comparative/Lesser.cpp
    Query/Comparative/Lesser.h
    Query/Comparative/LesserOrEqual.cpp
    Query/Comparative/LesserOrEqual.h
    Query/Comparative/NotEqual.cpp
    Query/Comparative/NotEqual.h
    Query/Comparative/Like.cpp
    Query/Comparative/Like.h
    Query/Comparative/NotLike.cpp
    Query/Comparative/NotLike.h
    Query/Comparative/IsNull.cpp
    Query/Comparative/IsNull.h
    Query/Comparative/IsNotNull.cpp
    Query/Comparative/IsNotNull.h
    Query/ComparativeType.cpp
    Query/ComparativeType.h
    Data/Data.h
    Data/Helper/TypeHelper.cpp
    Data/Helper/TypeHelper.h
    Data/TypeEnums.h
    Data/Value.cpp
    Data/Value.h
    Data/TypeEnums.cpp
    Data/NumericValue.cpp
    Data/NumericValue.h
    Data/CharacterValue.cpp
    Data/CharacterValue.h
    Data/ValueFactory.cpp
    Data/ValueFactory.h
    Data/Helper/ValueHelper.cpp
    Data/Helper/ValueHelper.h
    Data/Type/Int16.cpp
    Data/Type/Int16.h
    Data/Type/Int32.cpp
    Data/Type/Int32.h
    Data/Type/Int64.cpp
    Data/Type/Int64.h
    Data/Type/UInt16.cpp
    Data/Type/UInt16.h
    Data/Type/UInt32.cpp
    Data/Type/UInt32.h
    Data/Type/UInt64.cpp
    Data/Type/UInt64.h
    Data/Type/Double.cpp
    Data/Type/Double.h
    Data/Type/Float.cpp
    Data/Type/Float.h
    Data/Type/Point.cpp
    Data/Type/Point.h
    Data/Type/Matrix.cpp
    Data/Type/Matrix.h
    Data/Type/VarChar.cpp
    Data/Type/VarChar.h
    Data/Type/String.cpp
    Data/Type/String.h
    Data/Type/Text.cpp
    Data/Type/Text.h
    Data/Type/Blob.cpp
    Data/Type/Blob.h
    Data/Type/Byte.cpp
    Data/Type/Byte.h
    Data/Type/Boolean.cpp
    Data/Type/Boolean.h
    Data/Type/Date.cpp
    Data/Type/Date.h
    Data/Type/DateTime.cpp
    Data/Type/DateTime.h
    Data/Type/Time.cpp
    Data/Type/Time.h
    Data/Type/Currency.cpp
    Data/Type/Currency.h
    Data/Comparer/Comparer.cpp
    Data/Comparer/Comparer.h
    Exception/cldeNonSupportedFunctionException.cpp
    Exception/cldeNonSupportedFunctionException.h
    Exception/cldeException.cpp
    Exception/cldeException.h
    Common/IEquatable.h
    Common/IComputable.h
    Common/IPrintable.h
    Common/IFormatter.h
    Query/Query.h
    Query/Contract/IPredicateFormatter.h
    Query/Comparative.cpp
    Query/Comparative.h
    Query/CriteriaLeaf.cpp
    Query/CriteriaLeaf.h
    Query/CriteriaComposite.cpp
    Query/CriteriaComposite.h
    Query/CriteriaIterator.cpp
    Query/CriteriaIterator.h
    Query/Helper/CriteriaHelper.cpp
    Query/Helper/CriteriaHelper.h
    Query/Helper/ProxyHelper.cpp
    Query/Helper/ProxyHelper.h
    Data/Comparer/Less.cpp
    Data/Comparer/Less.h
    Data/Comparer/Greater.cpp
    Data/Comparer/Greater.h
    Data/Comparer/Compare.cpp
    Data/Comparer/Compare.h
    Data/ValueToPrimatives.hpp
    Store/Helper/EntityStoreHelper.cpp
    Store/Helper/EntityStoreHelper.h
    Store/Helper/CellHelper.cpp
    Store/Helper/CellHelper.h
    Store/Comparer/Compare.cpp
    Store/Comparer/Compare.h
    Store/Comparer/Greater.cpp
    Store/Comparer/Greater.h
    Store/Comparer/Less.cpp
    Store/Comparer/Less.h
    Store/AbstractEntity.h
    Store/AbstractEntity.cpp
    Store/Comparer/Comparer.h
    Store/Extra/EntityOutputFormatter.cpp
    Store/Extra/EntityOutputFormatter.h
    Foundation.h
Data/TimeBasedValue.cpp Data/TimeBasedValue.h)
